--- a/mybib.bib
+++ b/mybib.bib
@@ -200,3 +200,25 @@
   year={2006},
   publisher={Clarendon Press}
 }
+
+@article{edwill,
+  title={Mixed braid group actions from deformations of surface singularities},
+  author={Donovan, Will and Segal, Ed},
+  journal={Communications in Mathematical Physics},
+  volume={335},
+  number={1},
+  pages={497--543},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{bialynick,
+  title={Some theorems on actions of algebraic groups},
+  author={Bialynicki-Birula, Andrzej},
+  journal={Annals of mathematics},
+  volume={98},
+  number={3},
+  pages={480--497},
+  year={1973},
+  publisher={JSTOR}
+}
