--- a/mybib.bib
+++ b/mybib.bib
@@ -112,7 +112,7 @@
   publisher={American Mathematical Society Providence, RI}
 }
 
-@article{halpern2020combinatorial,
+@article{quasi-sym,
   title={Combinatorial constructions of derived equivalences},
   author={Halpern-Leistner, Daniel and Sam, Steven},
   journal={Journal of the American Mathematical Society},
