change section title

--- a/main.tex
+++ b/main.tex
@@ -912,7 +912,7 @@ $$
 T_{\Os_{\PP^1}}\Os_{\PP^1}(1,0) = C({\Os_{\PP^1}}^2 \to \Os_{\PP^1}(1,0)) =\Os_{\PP^1}(-1,0),
 $$
 using the Euler sequence. This is relation \eqref{rel2}.
-\section{Future research}
+\section{Toric Calabi-Yau threefolds of Picard rank 2}
 \label{future}
 In the rank 2 example we presented in Section \ref{rank2example}, the GIT quotient $X_1$ is a toric Calabi-Yau threefold of Picard rank 2. Given any toric Calabi-Yau threefold $X$ of Picard rank 2, we can consider the brane monodromy conjecture by constructing a toric Calabi-Yau GIT problem $(\CC^*)^2$ acting on $\CC^5$ for which $X$ is a GIT quotient. Note that we know the rank of the GIT problem 2 because of the rank of the Picard group, and we know the dimension of the problem is 5 because the quotient $X$ is three-dimensional. Suppose the problem is given by exact sequence
 $$
