--- a/main.tex
+++ b/main.tex
@@ -692,7 +692,7 @@ In line with this we will scale out $d$ and now think of $FIPS$ as $\left[ (\CC^
 \newline
 What should a meridian around $\{ f(a,b)=0\}$ correspond to? By condition (2) in Conjecture \ref{main}, we want a meridian about discriminant component $\Delta_{\Gamma}$ for $\Gamma \subset P$ a minimal face to correspond to a spherical twisting about a spherical functor $F_{\Gamma}: Z_{\Gamma^c} \to D^b(X_3)$. In this case we only have one non-trivial discriminant component which is $\Gamma = P$. We have $\Gamma^c = \emptyset$ and hence $Z_{\Gamma^c} = pt$. So we want meridians about $\Delta$ to correspond to spherical twists about spherical functors $F: D^b(pt) \to D^b(X_3)$. By our discussion in Section \ref{CY} on spherical functors, this is just a spherical twist about spherical object $F(\Os_{pt})$.\\
 \newline 
-A priori it seems like we have several spherical functors $F: D^b(pt) \to D^b(X_3)$ coming from the two walls $W_{13}$ and $W_{23}$. For $W_{13}$ the fixed locus under $(0,1)$ is $\{ a=d=e=0 \}$, and we can quotient by the remaining action and find $Z_{13} = \PP^1_{b,c}$. Similarly the fixed locus under $(1,-1)$ is $\{ a=0\}$, and we can quotient by the remaining action and find $Z_{23} = \left[ pt / \Z_2\right]$. Via wall crossing we have two SODs $D^b(Z_{13}) = \langle D^b(pt), D^b(pt) \rangle_{SOD}$ and $D^b(Z_{23}) = \langle D^b(pt), D^b(pt) \rangle_{SOD}$. Looking at the GIT quotient $X_1$ on the other side of $W_{13}$, we see we  remove $\{ d=e=0\}$ instead of $\{ a=0\}$ for $X_3$. In $X_3$, $\{ d=e=0\}$ is just the zero section $\PP^1_{b:c}$.
+A priori it seems like we have several spherical functors $F: D^b(pt) \to D^b(X_3)$ coming from the two walls $W_{13}$ and $W_{23}$. For $W_{13}$ the fixed locus under $(0,1)$ is $\{ a=d=e=0 \}$, and we can quotient by the remaining action and find $Z_{13} = \PP^1_{b,c}$. Similarly the fixed locus under $(1,-1)$ is $\{ a=0\}$, and we can quotient by the remaining action and find $Z_{23} = \left[ pt / \Z_2\right]$. Via wall crossing we have two SODs $D^b(Z_{13}) = \langle D^b(pt), D^b(pt) \rangle_{SOD}$ and $D^b(Z_{23}) = \langle D^b(pt), D^b(pt) \rangle_{SOD}$. Looking at the GIT quotient $X_1$ on the other side of $W_{13}$, we see we  remove $\{ d=e=0\}$ instead of $\{ a=0\}$ for $X_3$. In $X_3$, $\{ d=e=0\}$ is just the zero section $\left[\PP^1_{b:c}/ \Z_2 \right]$.
 \begin{center}
 \begin{tikzcd}
     \left[\PP^1_{b:c}/ \Z_2 \right] \arrow[d,"\pi_{13}"] \arrow[r, "i_{13}"] & X_3 \\
